jsAPI.css
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');

/* @keyframes expand {
  0% {
 height: 2200px;
  }
  100% {
     height: 500px;
  }
} */

@keyframes expand {
	0% {
		height: var(--startHeight);
	}
	100% {
		height: var(--endHeight);
	}
}

.commonPopup {
	font-family: "Open Sans", serif;
	position: absolute;
}

.popupMain {
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	bottom: 0;
	right: 0;
}

.loginPopup {
	font-size: 25px;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	bottom: 0;
	right: 0;
	animation: expand 0.5s ease-in-out;
}

.textInputPopup {
	margin: 0px;
	padding: 0px;
	display: block;
}

.textFieldLabeled {
	width: 100%;
	display: flex;
	justify-content: space-between;
	align-items: center;
	padding: 10px;
}

.textLabel {
	flex: 1;
	font-weight: 700;
	text-align: right;
	padding-right: 20px;
}

.simpleText {
	flex: 1;
	font-weight: 400;
	text-align: left;
	padding-right: 20px;
}

.textInput {
	flex: 1;
	border: none;
	background-color: transparent;
	font-weight: 200;
	font-family: "Open Sans", serif;
	font-stretch: expanded;
}

.stripSensorInput {
	text-align: right;
	padding: 0px 4px 5px 0px;
	letter-spacing: 0.15rem;
}

.loginButton {
	font-size: 25px;
	padding: 5px 15px;
	margin-top: 20px;
}

.loginPopup input[type="text"] {
	font-size: 25px;
	width: 220px;
}

.applyButton {
	padding-bottom: 5px;
}

.loginPopup input[type="password"] {
	font-size: 25px;
	width: 220px;
}

.dropDown {
	font-size: 25px;
}

input[type="text"] {
  	margin-left: 10px;
  	border: none;
  	font-weight: 200;
}

input[type="password"] {
  	margin-left: 10px;
  	border: none;
}

input:focus {
	outline: none;
}

.settingsTextField {
	width: 100%;
	padding: 0px 0px 6px 0px;
	position: relative;
	left: 1px;
	bottom: 5px;
}

.stripSensorInput {
	text-align: right;
	padding: 0px 4px 5px 0px;
	letter-spacing: 0.1rem;
	left: 2px;
	top: -4px;
}

.setUnitName {
	padding-top: 5px;
}

.backBar {
	position: absolute;
	left: 0;
	top: 0;
}

.backBarMain {
	display: flex;
	flex-direction: row;
	justify-content: flex-start;
}

.title {
	position: absolute;
	display: flex;
	align-items: center;
	justify-content: center;
	height: 100%
}

.commonButton {
	font-family: "Open Sans", serif;
	width: 100%;
	height: 100%;
	border: none;
	border-radius: 5px;
}

#pageName {
	position: relative;
	bottom: 5px;
	width: 400px;
	font-size: 40px;	
	height: 50%;
	padding: 30px;
	font-weight: 100;
	font-family: "Open Sans", serif;
}

#backButton {
	display: flex;
	align-items: center;
	justify-content: center;
	height: 40%;
}

#backArrow {
	position: relative;
	left: 7px;
}

